adicionando link do grupo06

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <li><a href=""><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-            <a href=""><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://paulinho010.github.io/lasalle.cscw.2021.1.grupo06/Index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Adriano Fernandes -->
         <!-- INÍCIO Guilherme Mendes -->
@@ -291,7 +291,7 @@
                 <li><a href="#"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://paulinho010.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://paulinho010.github.io/lasalle.cscw.2021.1.grupo06/Index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Paulo Sérgio -->
         <!-- INÍCIO Rafael Feres -->
@@ -435,7 +435,7 @@
             <ul class="social-icons">
                 <li><a href="https://www.instagram.com/joaosoriano7/"><i class="fa fa-instagram"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/joão-victor-gomes-soriano-51a785183/"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://paulinho010.github.io/lasalle.cscw.2021.1.grupo06/Index.html"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://joaosoriano7.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha
 					Página</button></a>
@@ -483,7 +483,7 @@
             </ul>
             <a href="https://joaogmcarvalho.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha
 					Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://paulinho010.github.io/lasalle.cscw.2021.1.grupo06/Index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM João Gabriel Carvalho -->
 		<div class="card">
