--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
             <ul class="social-icons">
                 <li><a href="https://www.instagram.com/joaosoriano7/"><i class="fa fa-instagram"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/joão-victor-gomes-soriano-51a785183/"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="https://paulinho010.github.io/lasalle.cscw.2021.1.grupo06/Index.html"><i class="fa fa-github"></i></a></li>
+                <li><a href="#"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://joaosoriano7.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha
 					Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://paulinho010.github.io/lasalle.cscw.2021.1.grupo06/Index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM João Soriano -->
         <!-- INÍCIO Pedro Henrique -->
